# pyborg

./: README.md  example.py  package.json  pyproject.toml
pyborg/: __init__.py  core.py
scripts/: format  lint  test
tests/: broken_cli  cli  test_pyborg.py
